# podcast

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml
.github/workflows/: ci.yml  nightly.yml
assets/voices/soulx/: alex.txt
docs/: TODO.md  python_development_standards_v3.md
docs/adr/: 0001-python-313-and-uv.md  0002-two-stage-resumable-workflow.md  0003-hybrid-tts-abstraction.md  0004-engines-qwen3-therock-kokoro-fallback.md  0005-llm-provider-adapter-layer.md  0006-word-budget-length-control.md  0007-segment-cache.md  0008-ffmpeg-assembly-loudnorm.md  0009-notebooklm-deep-dive-prompt.md  0010-per-turn-delivery-notes.md  0011-expressiveness-polish.md  0012-soulx-dialogue-engine.md  0013-audio-overview-formats.md  0014-word-level-emphasis.md
docs/superpowers/plans/: 2026-07-16-agpl-licensing.md
docs/superpowers/specs/: 2026-07-10-podcast-generator-design.md  2026-07-11-audio-overview-formats-design.md  2026-07-15-word-emphasis-design.md  2026-07-16-agpl-licensing-design.md
reports/: adversarial_review.json
schemas/: outline.schema.json  sources.schema.json  transcript.schema.json
scratchpad/emphasis-ab/: MANIFEST.md  render.py  render_v2.py
scripts/: adversarial_review.py  audit_deps.py  check_commit_msg.py  gatelib.py  post_ticket.py  pre_ticket.py
src/podcast/: __init__.py  config.py  doctor.py  emphasis.py  errors.py  workspace.py
src/podcast/audio/: __init__.py  assemble.py  pacing.py
src/podcast/cli/: __init__.py  app.py  ui.py
src/podcast/ingest/: __init__.py  converters.py  loader.py  tokens.py
src/podcast/llm/: __init__.py  anthropic.py  base.py  copilot_auth.py  fake.py  openai_compat.py  registry.py  structured.py
src/podcast/script/: __init__.py  budget.py  formats.py  markdown.py  models.py  pipeline.py  prompts.py
src/podcast/tts/: __init__.py  base.py  cache.py  kokoro.py  qwen3.py  registry.py  soulx.py  voices.py
tests/: conftest.py  test_adversarial_review.py  test_app.py  test_audio_assemble.py  test_audio_pacing.py  test_audit_deps.py  test_check_commit_msg.py  test_config.py  test_contracts.py  test_doctor.py  test_emphasis.py  test_errors.py  test_formats.py  test_gatelib.py  test_ingest_converters.py  test_ingest_loader.py  test_ingest_tokens.py  test_integration.py  test_license_headers.py  test_llm_anthropic.py  test_llm_base.py  test_llm_copilot_auth.py  test_llm_fake.py  test_llm_openai_compat.py  test_llm_registry.py  test_llm_structured.py  test_performance.py  test_post_ticket.py  test_pre_ticket.py  test_script_budget.py  test_script_markdown.py  test_script_models.py  test_script_pipeline.py  test_tts_cache.py  test_tts_kokoro.py  test_tts_qwen3.py  test_tts_registry.py  test_tts_soulx.py  test_tts_voices.py  test_ui.py  (+1 more)
